# scpi-softpanel

./: .dockerignore  .env.example  .gitignore  .prettierignore  Dockerfile  HANDOFF.md  README.md  docker-compose.yml  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.base.json  vitest.config.ts
.github/workflows/: ci.yml  desktop-release.yml  docker-publish.yml
apps/server/: package.json  tsconfig.json
apps/server/src/: config.ts  index.ts
apps/server/src/bridge/: BridgeClient.ts
apps/server/src/meter/: Meter.reconnect.test.ts  Meter.ts  Poller.ts
apps/server/src/store/: ReadingStore.test.ts  ReadingStore.ts
apps/server/src/ws/: hub.ts
apps/web/: env.d.ts  index.html  package.json  tsconfig.json  vite.config.ts
apps/web/src/: App.vue  style.css
apps/web/src/components/: ChartPanel.vue  CollapsibleSection.vue  ControlPanel.vue  HistogramChart.vue  LiveReading.vue  RawConsole.vue  SettingsPanel.vue  StatusBar.vue  TrendChart.vue
apps/web/src/composables/: useChartWindow.ts  useDisplayFont.ts  useTempUnit.ts
apps/web/src/lib/: format.ts  tone.ts
apps/web/src/stores/: meter.ts
bridge/: README.md  bridge.py  requirements.txt
rust/: Cargo.toml
rust/scpi-core/: Cargo.toml
rust/scpi-core/src/: csv_log.rs  functions.rs  lib.rs  messages.rs  meter.rs  ring.rs  scpi.rs
rust/scpi-desktop/: .gitignore  Cargo.toml  tauri.conf.json
rust/scpi-desktop/capabilities/: default.json
rust/scpi-desktop/icons/: icon.icns
rust/scpi-desktop/placeholder/: index.html
rust/scpi-desktop/src/: main.rs
rust/scpi-server/: Cargo.toml
rust/scpi-server/src/: config.rs  lib.rs  main.rs
scripts/: screenshot.mjs
