[package]
name = "scpi-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "scpi-server"
path = "src/main.rs"

[dependencies]
scpi-core = { path = "../scpi-core" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
